--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -67,3 +67,32 @@ body::-webkit-scrollbar {
     margin-left: auto !important;
 }
 
+.pulse {
+    animation: pulse 1s cubic-bezier(0.4, 0, 0.6, 1) ;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@media (max-width: 480px) {
+    @keyframes pulse {
+        0% {
+            transform: scale(1);
+        }
+        50% {
+            transform: scale(1.08);
+        }
+        100% {
+            transform: scale(1);
+        }
+    }
+  }
