--- a/src/Components/StaticTracking/StaticTracking.module.css
+++ b/src/Components/StaticTracking/StaticTracking.module.css
@@ -15,6 +15,10 @@ body
     border: 3px solid #232D4C !important;
     border-radius: 7px !important;
 }
+.uploadedCamera{
+    width: 50% !important;
+    min-height: 50vh !important;
+}
 .cameraIcon
 {
     color: #1E2846;
@@ -61,7 +65,8 @@ body
 }
 .processedImage {
     max-width: 100%;
-    max-height: 400px; 
+    min-width: 100%;
+    height: 50vh; 
   }
 
   .container {
@@ -81,6 +86,64 @@ body
 .display2{
     display: none;
 }
+.paragraph{
+    width: 80%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.mobfont{
+    font-size: 25px;
+    margin: auto;
+    padding: 5px;
+}
+.mobfont1{
+    font-size: 20px;
+    margin: auto;
+    padding: 5px;
+}
+table {
+    border-collapse: collapse;
+    width: 50%;
+    margin-top: 30px;
+    border: none;
+    background-color: #465578;
+    color: #fff;
+    text-align: center;
+    margin-left: 25%;
+  }
+  
+  th, td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #6e8ca0;
+    border-right: 1px solid #6e8ca0;
+    color: #fff;
+    text-align: center;
+  }
+  
+  th {
+    font-weight: bold;
+    color: #fff;
+    border-top: 1px solid #6e8ca0;
+    background-color: #6e8ca0;
+  }
+  
+  th:first-child {
+    border-left: 1px solid #6e8ca0;
+    border-right: none;
+  }
+  
+  th:last-child {
+    border-right: 1px solid #6e8ca0;
+    border-left: none;
+  }
+  
+  
+  table td {
+    border: 1px solid #6e8ca0;
+    padding: 10px;
+  }
+
 
 @media (max-width: 480px) {
     .display1{
@@ -95,8 +158,8 @@ body
         margin-top: 80px;
     }
     .camera{
-        width: 80% !important;
-        min-height: 25vh !important;
+        width: 90% !important;
+        min-height: 40vh !important;
         border: 3px solid #232D4C !important;
         border-radius: 7px !important;
         
@@ -107,4 +170,5 @@ body
         border: 3px solid #232D4C;
         border-radius: 7px;
     }
+    
   }
